# astro-classifier-neo

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  datasets.ipynb  env.yml  environment.yml  example_train.py  plasticc_train_lightcurves.parquet  pyproject.toml  readme.md  setup.cfg  setup.py
examples/: example_ncde_train.py  example_train.py  example_vae.py
pytorch_test/: datasets.py  model.py  probe.py  transformers.py
pytorch_test/plasticc/: __init__.py  constants.py  convert_spline_coeff.py  datasets.py
scripts/: example_train.py  generate_splines.py  get_data.py
src/pytorch_test/: model.py  probe.py  transformers.py
src/pytorch_test/models/: ncde.py  rnn.py  tcn.py  vae.py
src/pytorch_test/plasticc/: constants.py  datasets.py
tests/: test_datasets.py  test_transformers.py
