[tool.poetry]
name = "pytorch-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.7.0"
numpy = "^1.20.1"
pandas = "^1.2.2"
pyarrow = "^3.0.0"
requests = "^2.25.1"
scikit-learn = "^0.24.1"
astropy = "^4.2"
tqdm = "^4.57.0"
matplotlib = "^3.3.4"
tensorboard = "^2.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
pytest = "^6.2.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
mypy = "^0.812"
coverage = "^5.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
