[tool.poetry]
name = "pytorch-test"
version = "0.1.0"
description = "Library to classify astrophysical transients"
authors = ["Saji Champlin <saji@saji.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.7.0"
numpy = "^1.20.1"
pandas = "^1.2.2"
pyarrow = "^3.0.0"
requests = "^2.25.1"
scikit-learn = "^0.24.1"
astropy = "^4.2"
tqdm = "^4.57.0"
matplotlib = "^3.3.4"
tensorboard = "^2.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
pytest = "^6.2.2"
autopep8 = "^1.5.5"
mypy = "^0.812"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
vulture = "^2.3"
pylint = "^2.7.2"
rope = "^0.18.0"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[virtualenvs]
in-project = true

[tool.pylint.TYPECHECK]
generated-members=["numpy.*","torch.*"]
disable = ["C0103"]
fail-under = "9.0"

[tool.coverage.run]
relative_files = true
